# glass

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.claude/agents/: rust-async-developer.md  rust-mcp-tech-lead.md  sdp-qa-engineer.md
.github/workflows/: ci.yml
docs/: SETUP_GUIDE.md
src/: config.rs  error.rs  lib.rs  main.rs  sdp_client.rs  server.rs
src/models/: common.rs  conversation.rs  mod.rs  note.rs  request.rs  technician.rs
src/tools/: inputs.rs  mod.rs
