[package]
name = "glass"
version = "0.1.0"
edition = "2021"
description = "MCP server for ManageEngine ServiceDesk Plus"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Reventlow/glass"
homepage = "https://github.com/Reventlow/glass"
documentation = "https://github.com/Reventlow/glass#readme"
authors = ["FynBus IT <it@fynbus.dk>"]
keywords = ["mcp", "servicedesk", "manageengine", "itsm", "helpdesk"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.91"

[dependencies]
# MCP SDK - official Rust implementation
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "8bd3fcb890f87e4b8fb78d029a1c46f58ab16b07", features = [
    "server",
    "transport-io",
    "macros",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Environment and configuration
dotenvy = "0.15"

# URL encoding for SDP API input_data
urlencoding = "2"

# URL parsing for SSRF validation
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1"
